Offline4/1505071/y.output
Terminals unused in grammar

   DO
   BREAK
   CONTINUE
   CHAR
   DOUBLE
   SWITCH
   CASE
   DEFAULT
   STRING


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_declaration
    6     | func_definition

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN SEMICOLON
    8                 | type_specifier ID LPAREN RPAREN SEMICOLON

    9 func_definition: type_specifier ID LPAREN parameter_list RPAREN compound_statement
   10                | type_specifier ID LPAREN RPAREN compound_statement

   11 parameter_list: parameter_list COMMA type_specifier ID
   12               | parameter_list COMMA type_specifier
   13               | type_specifier ID
   14               | type_specifier

   15 $@1: %empty

   16 $@2: %empty

   17 $@3: %empty

   18 compound_statement: LCURL $@1 statements $@2 RCURL $@3
   19                   | LCURL RCURL

   20 var_declaration: type_specifier declaration_list SEMICOLON

   21 type_specifier: INT
   22               | FLOAT
   23               | VOID

   24 declaration_list: declaration_list COMMA ID
   25                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   26                 | ID
   27                 | ID LTHIRD CONST_INT RTHIRD

   28 statements: statement
   29           | statements statement

   30 statement: var_declaration
   31          | expression_statement
   32          | compound_statement
   33          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   34          | IF LPAREN expression RPAREN statement
   35          | IF LPAREN expression RPAREN statement ELSE statement
   36          | WHILE LPAREN expression RPAREN statement
   37          | PRINTLN LPAREN ID RPAREN SEMICOLON
   38          | RETURN expression SEMICOLON

   39 expression_statement: SEMICOLON
   40                     | expression SEMICOLON

   41 variable: ID
   42         | ID LTHIRD expression RTHIRD

   43 expression: logic_expression
   44           | variable ASSIGNOP logic_expression

   45 logic_expression: rel_expression
   46                 | rel_expression LOGICOP rel_expression

   47 rel_expression: simple_expression
   48               | simple_expression RELOP simple_expression

   49 simple_expression: term
   50                  | simple_expression ADDOP term

   51 term: unary_expression
   52     | term MULOP unary_expression

   53 unary_expression: ADDOP unary_expression
   54                 | NOT unary_expression
   55                 | factor

   56 factor: variable
   57       | ID LPAREN argument_list RPAREN
   58       | LPAREN expression RPAREN
   59       | CONST_INT
   60       | CONST_FLOAT
   61       | CONST_CHAR
   62       | variable INCOP
   63       | variable DECOP

   64 argument_list: arguments
   65              | %empty

   66 arguments: arguments COMMA logic_expression
   67          | logic_expression


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 34 35
ELSE (259) 35
FOR (260) 33
WHILE (261) 36
DO (262)
BREAK (263)
CONTINUE (264)
INT (265) 21
FLOAT (266) 22
CHAR (267)
DOUBLE (268)
VOID (269) 23
RETURN (270) 38
SWITCH (271)
CASE (272)
DEFAULT (273)
INCOP (274) 62
DECOP (275) 63
ASSIGNOP (276) 44
LPAREN (277) 7 8 9 10 33 34 35 36 37 57 58
RPAREN (278) 7 8 9 10 33 34 35 36 37 57 58
LCURL (279) 18 19
RCURL (280) 18 19
LTHIRD (281) 25 27 42
RTHIRD (282) 25 27 42
SEMICOLON (283) 7 8 20 37 38 39 40
COMMA (284) 11 12 24 25 66
STRING (285)
NOT (286) 54
PRINTLN (287) 37
ID (288) 7 8 9 10 11 13 24 25 26 27 37 41 42 57
CONST_INT (289) 25 27 59
CONST_FLOAT (290) 60
CONST_CHAR (291) 61
ADDOP (292) 50 53
MULOP (293) 52
LOGICOP (294) 46
RELOP (295) 48
second_precedence (296)


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
start (43)
    on left: 1, on right: 0
program (44)
    on left: 2 3, on right: 1 2
unit (45)
    on left: 4 5 6, on right: 2 3
func_declaration (46)
    on left: 7 8, on right: 5
func_definition (47)
    on left: 9 10, on right: 6
parameter_list (48)
    on left: 11 12 13 14, on right: 7 9 11 12
compound_statement (49)
    on left: 18 19, on right: 9 10 32
$@1 (50)
    on left: 15, on right: 18
$@2 (51)
    on left: 16, on right: 18
$@3 (52)
    on left: 17, on right: 18
var_declaration (53)
    on left: 20, on right: 4 30
type_specifier (54)
    on left: 21 22 23, on right: 7 8 9 10 11 12 13 14 20
declaration_list (55)
    on left: 24 25 26 27, on right: 20 24 25
statements (56)
    on left: 28 29, on right: 18 29
statement (57)
    on left: 30 31 32 33 34 35 36 37 38, on right: 28 29 33 34 35 36
expression_statement (58)
    on left: 39 40, on right: 31 33
variable (59)
    on left: 41 42, on right: 44 56 62 63
expression (60)
    on left: 43 44, on right: 33 34 35 36 38 40 42 58
logic_expression (61)
    on left: 45 46, on right: 43 44 66 67
rel_expression (62)
    on left: 47 48, on right: 45 46
simple_expression (63)
    on left: 49 50, on right: 47 48 50
term (64)
    on left: 51 52, on right: 49 50 52
unary_expression (65)
    on left: 53 54 55, on right: 51 52 53 54
factor (66)
    on left: 56 57 58 59 60 61 62 63, on right: 55
argument_list (67)
    on left: 64 65, on right: 57
arguments (68)
    on left: 66 67, on right: 64 66


State 0

    0 $accept: . start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    start             go to state 4
    program           go to state 5
    unit              go to state 6
    func_declaration  go to state 7
    func_definition   go to state 8
    var_declaration   go to state 9
    type_specifier    go to state 10


State 1

   21 type_specifier: INT .

    $default  reduce using rule 21 (type_specifier)


State 2

   22 type_specifier: FLOAT .

    $default  reduce using rule 22 (type_specifier)


State 3

   23 type_specifier: VOID .

    $default  reduce using rule 23 (type_specifier)


State 4

    0 $accept: start . $end

    $end  shift, and go to state 11


State 5

    1 start: program .
    2 program: program . unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (start)

    unit              go to state 12
    func_declaration  go to state 7
    func_definition   go to state 8
    var_declaration   go to state 9
    type_specifier    go to state 10


State 6

    3 program: unit .

    $default  reduce using rule 3 (program)


State 7

    5 unit: func_declaration .

    $default  reduce using rule 5 (unit)


State 8

    6 unit: func_definition .

    $default  reduce using rule 6 (unit)


State 9

    4 unit: var_declaration .

    $default  reduce using rule 4 (unit)


State 10

    7 func_declaration: type_specifier . ID LPAREN parameter_list RPAREN SEMICOLON
    8                 | type_specifier . ID LPAREN RPAREN SEMICOLON
    9 func_definition: type_specifier . ID LPAREN parameter_list RPAREN compound_statement
   10                | type_specifier . ID LPAREN RPAREN compound_statement
   20 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 13

    declaration_list  go to state 14


State 11

    0 $accept: start $end .

    $default  accept


State 12

    2 program: program unit .

    $default  reduce using rule 2 (program)


State 13

    7 func_declaration: type_specifier ID . LPAREN parameter_list RPAREN SEMICOLON
    8                 | type_specifier ID . LPAREN RPAREN SEMICOLON
    9 func_definition: type_specifier ID . LPAREN parameter_list RPAREN compound_statement
   10                | type_specifier ID . LPAREN RPAREN compound_statement
   26 declaration_list: ID .
   27                 | ID . LTHIRD CONST_INT RTHIRD

    LPAREN  shift, and go to state 15
    LTHIRD  shift, and go to state 16

    $default  reduce using rule 26 (declaration_list)


State 14

   20 var_declaration: type_specifier declaration_list . SEMICOLON
   24 declaration_list: declaration_list . COMMA ID
   25                 | declaration_list . COMMA ID LTHIRD CONST_INT RTHIRD

    SEMICOLON  shift, and go to state 17
    COMMA      shift, and go to state 18


State 15

    7 func_declaration: type_specifier ID LPAREN . parameter_list RPAREN SEMICOLON
    8                 | type_specifier ID LPAREN . RPAREN SEMICOLON
    9 func_definition: type_specifier ID LPAREN . parameter_list RPAREN compound_statement
   10                | type_specifier ID LPAREN . RPAREN compound_statement

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3
    RPAREN  shift, and go to state 19

    parameter_list  go to state 20
    type_specifier  go to state 21


State 16

   27 declaration_list: ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 22


State 17

   20 var_declaration: type_specifier declaration_list SEMICOLON .

    $default  reduce using rule 20 (var_declaration)


State 18

   24 declaration_list: declaration_list COMMA . ID
   25                 | declaration_list COMMA . ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 23


State 19

    8 func_declaration: type_specifier ID LPAREN RPAREN . SEMICOLON
   10 func_definition: type_specifier ID LPAREN RPAREN . compound_statement

    LCURL      shift, and go to state 24
    SEMICOLON  shift, and go to state 25

    compound_statement  go to state 26


State 20

    7 func_declaration: type_specifier ID LPAREN parameter_list . RPAREN SEMICOLON
    9 func_definition: type_specifier ID LPAREN parameter_list . RPAREN compound_statement
   11 parameter_list: parameter_list . COMMA type_specifier ID
   12               | parameter_list . COMMA type_specifier

    RPAREN  shift, and go to state 27
    COMMA   shift, and go to state 28


State 21

   13 parameter_list: type_specifier . ID
   14               | type_specifier .

    ID  shift, and go to state 29

    $default  reduce using rule 14 (parameter_list)


State 22

   27 declaration_list: ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 30


State 23

   24 declaration_list: declaration_list COMMA ID .
   25                 | declaration_list COMMA ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 31

    $default  reduce using rule 24 (declaration_list)


State 24

   18 compound_statement: LCURL . $@1 statements $@2 RCURL $@3
   19                   | LCURL . RCURL

    RCURL  shift, and go to state 32

    $default  reduce using rule 15 ($@1)

    $@1  go to state 33


State 25

    8 func_declaration: type_specifier ID LPAREN RPAREN SEMICOLON .

    $default  reduce using rule 8 (func_declaration)


State 26

   10 func_definition: type_specifier ID LPAREN RPAREN compound_statement .

    $default  reduce using rule 10 (func_definition)


State 27

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN . SEMICOLON
    9 func_definition: type_specifier ID LPAREN parameter_list RPAREN . compound_statement

    LCURL      shift, and go to state 24
    SEMICOLON  shift, and go to state 34

    compound_statement  go to state 35


State 28

   11 parameter_list: parameter_list COMMA . type_specifier ID
   12               | parameter_list COMMA . type_specifier

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    type_specifier  go to state 36


State 29

   13 parameter_list: type_specifier ID .

    $default  reduce using rule 13 (parameter_list)


State 30

   27 declaration_list: ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 27 (declaration_list)


State 31

   25 declaration_list: declaration_list COMMA ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 37


State 32

   19 compound_statement: LCURL RCURL .

    $default  reduce using rule 19 (compound_statement)


State 33

   18 compound_statement: LCURL $@1 . statements $@2 RCURL $@3

    IF           shift, and go to state 38
    FOR          shift, and go to state 39
    WHILE        shift, and go to state 40
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 41
    LPAREN       shift, and go to state 42
    LCURL        shift, and go to state 24
    SEMICOLON    shift, and go to state 43
    NOT          shift, and go to state 44
    PRINTLN      shift, and go to state 45
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    CONST_CHAR   shift, and go to state 49
    ADDOP        shift, and go to state 50

    compound_statement    go to state 51
    var_declaration       go to state 52
    type_specifier        go to state 53
    statements            go to state 54
    statement             go to state 55
    expression_statement  go to state 56
    variable              go to state 57
    expression            go to state 58
    logic_expression      go to state 59
    rel_expression        go to state 60
    simple_expression     go to state 61
    term                  go to state 62
    unary_expression      go to state 63
    factor                go to state 64


State 34

    7 func_declaration: type_specifier ID LPAREN parameter_list RPAREN SEMICOLON .

    $default  reduce using rule 7 (func_declaration)


State 35

    9 func_definition: type_specifier ID LPAREN parameter_list RPAREN compound_statement .

    $default  reduce using rule 9 (func_definition)


State 36

   11 parameter_list: parameter_list COMMA type_specifier . ID
   12               | parameter_list COMMA type_specifier .

    ID  shift, and go to state 65

    $default  reduce using rule 12 (parameter_list)


State 37

   25 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 66


State 38

   34 statement: IF . LPAREN expression RPAREN statement
   35          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 67


State 39

   33 statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 68


State 40

   36 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 69


State 41

   38 statement: RETURN . expression SEMICOLON

    LPAREN       shift, and go to state 42
    NOT          shift, and go to state 44
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    CONST_CHAR   shift, and go to state 49
    ADDOP        shift, and go to state 50

    variable           go to state 57
    expression         go to state 70
    logic_expression   go to state 59
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 42

   58 factor: LPAREN . expression RPAREN

    LPAREN       shift, and go to state 42
    NOT          shift, and go to state 44
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    CONST_CHAR   shift, and go to state 49
    ADDOP        shift, and go to state 50

    variable           go to state 57
    expression         go to state 71
    logic_expression   go to state 59
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 43

   39 expression_statement: SEMICOLON .

    $default  reduce using rule 39 (expression_statement)


State 44

   54 unary_expression: NOT . unary_expression

    LPAREN       shift, and go to state 42
    NOT          shift, and go to state 44
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    CONST_CHAR   shift, and go to state 49
    ADDOP        shift, and go to state 50

    variable          go to state 72
    unary_expression  go to state 73
    factor            go to state 64


State 45

   37 statement: PRINTLN . LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 74


State 46

   41 variable: ID .
   42         | ID . LTHIRD expression RTHIRD
   57 factor: ID . LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 75
    LTHIRD  shift, and go to state 76

    $default  reduce using rule 41 (variable)


State 47

   59 factor: CONST_INT .

    $default  reduce using rule 59 (factor)


State 48

   60 factor: CONST_FLOAT .

    $default  reduce using rule 60 (factor)


State 49

   61 factor: CONST_CHAR .

    $default  reduce using rule 61 (factor)


State 50

   53 unary_expression: ADDOP . unary_expression

    LPAREN       shift, and go to state 42
    NOT          shift, and go to state 44
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    CONST_CHAR   shift, and go to state 49
    ADDOP        shift, and go to state 50

    variable          go to state 72
    unary_expression  go to state 77
    factor            go to state 64


State 51

   32 statement: compound_statement .

    $default  reduce using rule 32 (statement)


State 52

   30 statement: var_declaration .

    $default  reduce using rule 30 (statement)


State 53

   20 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 78

    declaration_list  go to state 14


State 54

   18 compound_statement: LCURL $@1 statements . $@2 RCURL $@3
   29 statements: statements . statement

    IF           shift, and go to state 38
    FOR          shift, and go to state 39
    WHILE        shift, and go to state 40
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    RETURN       shift, and go to state 41
    LPAREN       shift, and go to state 42
    LCURL        shift, and go to state 24
    SEMICOLON    shift, and go to state 43
    NOT          shift, and go to state 44
    PRINTLN      shift, and go to state 45
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    CONST_CHAR   shift, and go to state 49
    ADDOP        shift, and go to state 50

    $default  reduce using rule 16 ($@2)

    compound_statement    go to state 51
    $@2                   go to state 79
    var_declaration       go to state 52
    type_specifier        go to state 53
    statement             go to state 80
    expression_statement  go to state 56
    variable              go to state 57
    expression            go to state 58
    logic_expression      go to state 59
    rel_expression        go to state 60
    simple_expression     go to state 61
    term                  go to state 62
    unary_expression      go to state 63
    factor                go to state 64


State 55

   28 statements: statement .

    $default  reduce using rule 28 (statements)


State 56

   31 statement: expression_statement .

    $default  reduce using rule 31 (statement)


State 57

   44 expression: variable . ASSIGNOP logic_expression
   56 factor: variable .
   62       | variable . INCOP
   63       | variable . DECOP

    INCOP     shift, and go to state 81
    DECOP     shift, and go to state 82
    ASSIGNOP  shift, and go to state 83

    $default  reduce using rule 56 (factor)


State 58

   40 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 84


State 59

   43 expression: logic_expression .

    $default  reduce using rule 43 (expression)


State 60

   45 logic_expression: rel_expression .
   46                 | rel_expression . LOGICOP rel_expression

    LOGICOP  shift, and go to state 85

    $default  reduce using rule 45 (logic_expression)


State 61

   47 rel_expression: simple_expression .
   48               | simple_expression . RELOP simple_expression
   50 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 86
    RELOP  shift, and go to state 87

    $default  reduce using rule 47 (rel_expression)


State 62

   49 simple_expression: term .
   52 term: term . MULOP unary_expression

    MULOP  shift, and go to state 88

    $default  reduce using rule 49 (simple_expression)


State 63

   51 term: unary_expression .

    $default  reduce using rule 51 (term)


State 64

   55 unary_expression: factor .

    $default  reduce using rule 55 (unary_expression)


State 65

   11 parameter_list: parameter_list COMMA type_specifier ID .

    $default  reduce using rule 11 (parameter_list)


State 66

   25 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 25 (declaration_list)


State 67

   34 statement: IF LPAREN . expression RPAREN statement
   35          | IF LPAREN . expression RPAREN statement ELSE statement

    LPAREN       shift, and go to state 42
    NOT          shift, and go to state 44
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    CONST_CHAR   shift, and go to state 49
    ADDOP        shift, and go to state 50

    variable           go to state 57
    expression         go to state 89
    logic_expression   go to state 59
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 68

   33 statement: FOR LPAREN . expression_statement expression_statement expression RPAREN statement

    LPAREN       shift, and go to state 42
    SEMICOLON    shift, and go to state 43
    NOT          shift, and go to state 44
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    CONST_CHAR   shift, and go to state 49
    ADDOP        shift, and go to state 50

    expression_statement  go to state 90
    variable              go to state 57
    expression            go to state 58
    logic_expression      go to state 59
    rel_expression        go to state 60
    simple_expression     go to state 61
    term                  go to state 62
    unary_expression      go to state 63
    factor                go to state 64


State 69

   36 statement: WHILE LPAREN . expression RPAREN statement

    LPAREN       shift, and go to state 42
    NOT          shift, and go to state 44
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    CONST_CHAR   shift, and go to state 49
    ADDOP        shift, and go to state 50

    variable           go to state 57
    expression         go to state 91
    logic_expression   go to state 59
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 70

   38 statement: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 92


State 71

   58 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 93


State 72

   56 factor: variable .
   62       | variable . INCOP
   63       | variable . DECOP

    INCOP  shift, and go to state 81
    DECOP  shift, and go to state 82

    $default  reduce using rule 56 (factor)


State 73

   54 unary_expression: NOT unary_expression .

    $default  reduce using rule 54 (unary_expression)


State 74

   37 statement: PRINTLN LPAREN . ID RPAREN SEMICOLON

    ID  shift, and go to state 94


State 75

   57 factor: ID LPAREN . argument_list RPAREN

    LPAREN       shift, and go to state 42
    NOT          shift, and go to state 44
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    CONST_CHAR   shift, and go to state 49
    ADDOP        shift, and go to state 50

    $default  reduce using rule 65 (argument_list)

    variable           go to state 72
    logic_expression   go to state 95
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64
    argument_list      go to state 96
    arguments          go to state 97


State 76

   42 variable: ID LTHIRD . expression RTHIRD

    LPAREN       shift, and go to state 42
    NOT          shift, and go to state 44
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    CONST_CHAR   shift, and go to state 49
    ADDOP        shift, and go to state 50

    variable           go to state 57
    expression         go to state 98
    logic_expression   go to state 59
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 77

   53 unary_expression: ADDOP unary_expression .

    $default  reduce using rule 53 (unary_expression)


State 78

   26 declaration_list: ID .
   27                 | ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 16

    $default  reduce using rule 26 (declaration_list)


State 79

   18 compound_statement: LCURL $@1 statements $@2 . RCURL $@3

    RCURL  shift, and go to state 99


State 80

   29 statements: statements statement .

    $default  reduce using rule 29 (statements)


State 81

   62 factor: variable INCOP .

    $default  reduce using rule 62 (factor)


State 82

   63 factor: variable DECOP .

    $default  reduce using rule 63 (factor)


State 83

   44 expression: variable ASSIGNOP . logic_expression

    LPAREN       shift, and go to state 42
    NOT          shift, and go to state 44
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    CONST_CHAR   shift, and go to state 49
    ADDOP        shift, and go to state 50

    variable           go to state 72
    logic_expression   go to state 100
    rel_expression     go to state 60
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 84

   40 expression_statement: expression SEMICOLON .

    $default  reduce using rule 40 (expression_statement)


State 85

   46 logic_expression: rel_expression LOGICOP . rel_expression

    LPAREN       shift, and go to state 42
    NOT          shift, and go to state 44
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    CONST_CHAR   shift, and go to state 49
    ADDOP        shift, and go to state 50

    variable           go to state 72
    rel_expression     go to state 101
    simple_expression  go to state 61
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 86

   50 simple_expression: simple_expression ADDOP . term

    LPAREN       shift, and go to state 42
    NOT          shift, and go to state 44
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    CONST_CHAR   shift, and go to state 49
    ADDOP        shift, and go to state 50

    variable          go to state 72
    term              go to state 102
    unary_expression  go to state 63
    factor            go to state 64


State 87

   48 rel_expression: simple_expression RELOP . simple_expression

    LPAREN       shift, and go to state 42
    NOT          shift, and go to state 44
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    CONST_CHAR   shift, and go to state 49
    ADDOP        shift, and go to state 50

    variable           go to state 72
    simple_expression  go to state 103
    term               go to state 62
    unary_expression   go to state 63
    factor             go to state 64


State 88

   52 term: term MULOP . unary_expression

    LPAREN       shift, and go to state 42
    NOT          shift, and go to state 44
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    CONST_CHAR   shift, and go to state 49
    ADDOP        shift, and go to state 50

    variable          go to state 72
    unary_expression  go to state 104
    factor            go to state 64


State 89

   34 statement: IF LPAREN expression . RPAREN statement
   35          | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 105


State 90

   33 statement: FOR LPAREN expression_statement . expression_statement expression RPAREN statement

    LPAREN       shift, and go to state 42
    SEMICOLON    shift, and go to state 43
    NOT          shift, and go to state 44
    ID           shift, and go to state 46
    CONST_INT    shift, and go to state 47
    CONST_FLOAT  shift, and go to state 48
    CONST_CHAR   shift, and go to state 49
    ADDOP        shift, and go to state 50

    expression_statement  go to state 106
    variable              go to state 57
    expression            go to state 58
    logic_expression      go to state 59
    rel_expression        go to state 60
    simple_expression     go to state 61
    term                  go to state 62
    unary_expression      go to state 63
    factor                go to state 64


State 91

   36 statement: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 107


State 92

   38 statement: RETURN expression SEMICOLON .

    $default  reduce using rule 38 (statement)


State 93

   58 factor: LPAREN expression RPAREN .

    $default  reduce using rule 58 (factor)


State 94

   37 statement: PRINTLN LPAREN ID . RPAREN SEMICOLON

    RPAREN  shift, and go to state 108


State 95

   67 arguments: logic_expression .

    $default  reduce using rule 67 (arguments)


State 96

   57 factor: ID LPAREN argument_list . RPAREN

    RPAREN  shift, and go to state 109


State 97

   64 argument_list: arguments .
   66 arguments: arguments . COMMA logic_expression

    COMMA  shift, and go to state 110

    $default  reduce using rule 64 (argument_list)


State 98

   42 variable: ID LTHIRD expression . RTHIRD

    RTHIRD  shift, and go to state 111


State 99

   18 compound_statement: LCURL $@1 statements $@2 RCURL . $@3

    $default  reduce using rule 17 ($@3)

    $@3  go to state 112


State 100

   44 expression: variable ASSIGNOP logic_expression .

    $default  reduce using rule 44 (expression)


State 101

   46 logic_expression: rel_expression LOGICOP rel_expression .

    $default  reduce using rule 46 (logic_expression)


State 102

   50 simple_expression: simple_expression ADDOP term .
   52 term: term . MULOP unary_expression

    MULOP  shift, and go to state 88

    $default  reduce using rule 50 (simple_expression)


State 103

   48 rel_expression: simple_expression RELOP simple_expression .
   50 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 86

    $default  reduce using rule 48 (rel_expression)


State 104

   52 term: term MULOP unary_expression .

    $default  reduce using rule 52 (term)


State 105

   34 statement: IF LPAREN expression RPAREN . statement
   35          | IF LPAREN expression RPAREN . statement ELSE statement
